本地视频帧截取

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
     </dependency>
 
 
-    <!--ffmpeg音视频转换-->
+    <!--Java Audio Video Encoder音视频转换-->
     <dependency>
       <groupId>ws.schild</groupId>
       <artifactId>jave-all-deps</artifactId>
